fix: Fix styling on mobile devices

--- a/src/components/Search/Form.scss
+++ b/src/components/Search/Form.scss
@@ -1,14 +1,16 @@
 .search-form {
+    display: flex;
     width: 90%;
     margin: 20px auto;
 
     input {
+        flex: 1;
+        width: 100%;
         padding: 12px 20px;
         font-size: 1rem;
         border: 2px solid;
         border-radius: 5px;
         text-align: center;
         outline: transparent;
-        width: 100%;
     }
 }
